ABMS for contacts and companies

--- a/client/components/Company/Company_create.html
+++ b/client/components/Company/Company_create.html
@@ -1,4 +1,4 @@
-<template name="Customer_create">
+<template name="Company_create">
   <div class="panel panel-default appear-first">
     <div class="panel-heading">DATOS DE LA EMPRESA</div>
 
