--- a/client/stylesheets/base/variables.import.less
+++ b/client/stylesheets/base/variables.import.less
@@ -2,7 +2,7 @@
 @import "./lib/bootstrap/variables.import.less";
 
 // Custom Variables
-@brand-primary: #f67206;
+@brand-primary: #742887;
 @man-dark: #8BA7B0;
 @man-bg: fade(@man-dark, 60%);
 @woman-dark:#AB7EB0;
