--- a/client/components/Contact/Contact_show.html
+++ b/client/components/Contact/Contact_show.html
@@ -1,63 +1,76 @@
 <template name="Contact_show">
-  {{#if contact origin}}
-  <div class='component-colored-info'>
-    <div class=''>
-      <h3 class='text-uppercase'>Contactos <small></small></h3>
-    </div>
-    <div class=''>
-    {{#each rel}}
-      {{#with contact origin}}
-        <div class='well well-sm' id={{_id}}>
-          <div>
+
+    {{#if rel}}
+    <div class='col-xs-12 col-md-6 col-lg-3'>
+
+      <div class='component-colored-info'>
+        <h4 class='text-uppercase'>
+          Contactos
+        </h4>
+        <div class=''>
+          {{#each rel}}
+          {{notes}}
+          {{#with contact origin}}
+
+              <div class='well well-clickable well-sm {{#if deleting}}shake{{/if}}' id='{{_id}}' data-action='show-profile'>
+
+                <div class='row'>
+                  <div class='col-xs-12 col-md-12 col-lg-12'>
+                    {{#if deleting}}
+                      <div class='text-right'>
+                        <button class='btn btn-danger shadow' data-action='delete-item'> X </button>
+                      </div>
+                    {{/if}}
+                    <h4 class='text-info'>
+                  {{treatedAs}}</h4>
 
 
-              <h2 class='text-info'><small class='text-muted'>
-                {{#if isMale}}
-                  <i class='fa fa-mars'></i>{{else}}
-                  <i class='fa fa-venus'></i>
-                {{/if}}
+                  </div>
+                </div>
+                <div class='row'>
+                  <div class='col-xs-6 col-md-6 col-lg-4'>
+                    <p class='text text-muted'>
+                      <small class='text-muted'>
+                        {{#if isMale}}
+                          <i class='fa fa-mars'> </i>{{else}}
+                          <i class='fa fa-venus'> </i>
+                        {{/if}}
 
-              </small>{{treatedAs}}</h2>
+                      </small>
+                      {{#if formalTreatment}}
+                        <span class='label label-warning'>FORMAL</span>
+                      {{/if}}
+                    </p>
+                  </div>
 
+                  <div class='col-xs-3 col-md-3 col-lg-4'>
+                    {{#if email}}
 
-          </div>
-          <div class='row'>
-            <div class='col-xs-6'>
-              <p class='text text-muted'>
+                      <a class='btn btn-lg btn-primary' href='mailto:{{email}}' data-action='email'>
+                        <i class='fa fa-envelope'></i>
+                      </a>
 
+                    {{/if}}
 
-                {{#if formalTreatment}}
-                  <span class='label label-warning'>FORMAL</span>
-                {{/if}}
-              </p>
-            </div>
+                  </div>
+                  <div class='col-xs-3 col-md-3 col-lg-4'>
 
-            <div class='col-xs-3'>
-              {{#if email}}
+                    {{#if mobile}}
+                      <a class='btn btn-lg btn-primary' href='tel:{{mobile}}' data-action='mobile'>
+                        <i class='fa fa-whatsapp'></i>
+                      </a>
+                    {{/if}}
 
-                <a class='btn btn-lg btn-primary' href='mailto:{{email}}'>
-                  <i class='fa fa-envelope'></i>
-                </a>
+                  </div>
 
-              {{/if}}
-
-            </div>
-            <div class='col-xs-3'>
-
-              {{#if mobile}}
-                <a class='btn btn-lg btn-primary' href='tel:{{mobile}}'>
-                  <i class='fa fa-whatsapp'></i>
-                </a>
-              {{/if}}
-
-            </div>
-
-          </div>
+                </div>
+              </div>
+              {{/with}}
+              
+          {{/each}}
         </div>
-      {{/with}}
-    {{/each}}
-  </div>
-  </div>
-  <hr>
-  {{/if}}
+      </div>
+    </div>
+
+    {{/if}}
 </template>
