--- a/client/components/Options/Create_options.html
+++ b/client/components/Options/Create_options.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class='col-xs-12 col-md-6 col-lg-3'>
-      <a class='btn btn-primary appear-second' href="{{pathFor 'createVendor'}}">+PROVEEDOR</a>
+      <a class='btn btn-primary appear-second' href="../create-company?relType=CUST">+PROVEEDOR</a>
       <hr>
     </div>
 
