--- a/client/components/Place/Place_show.html
+++ b/client/components/Place/Place_show.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class='col-xs-4 col-md-4 col-lg-4'>
                   {{#if phone}}
-                    <a class='btn btn-lg btn-primary' href='tel:{{phone}}'>
+                    <a class='btn btn-lg btn-primary' href='tel:{{phone}}' data-action='phone'>
                       <i class="fa fa-phone"></i>
                     </a>
                   {{/if}}
@@ -45,6 +45,6 @@
         {{/each}}
         {{/momentum}}
       </div>
-        
+
     {{/if}}
 </template>
