--- a/client/components/Search/Search_fast_result.html
+++ b/client/components/Search/Search_fast_result.html
@@ -8,7 +8,7 @@
         <span class='label label-default'>
           {{relTypeTranslate rel.type}}</span>
       </p>
-      <a class='btn btn-primary' href='../show-{{actodeType}}/{{rel.destiny}}'>VER real</a>
+      <a class='btn btn-primary' href='../show-{{actodeType}}/{{rel.destiny}}?relType={{rel.type}}'>VER</a>
     {{/if}}
     {{#if cont}}
       <h3>{{treatedAs}}</h3>
