--- a/client/components/Contact/Contact_create.html
+++ b/client/components/Contact/Contact_create.html
@@ -26,6 +26,9 @@
               {{> afQuickField name='isMale'}}
             </div>
             <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+              {{> afQuickField name='bdate'}}
+            </div>
+            <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
               {{> afQuickField name='formalTreatment'}}
             </div>
             <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
@@ -33,6 +36,12 @@
             </div>
             <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
               {{> afQuickField name='mobile'}}
+            </div>
+            <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+              {{> afQuickField name='phone'}}
+            </div>
+            <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+              {{> afQuickField name='internalPhone'}}
             </div>
 
         </div>
