--- a/client/components/Contact/Contact_show.html
+++ b/client/components/Contact/Contact_show.html
@@ -23,12 +23,14 @@
                     {{/if}}
                     <h4 class='text-info'>
                   {{treatedAs}}</h4>
-
+                  {{#if bdate}}
+                  <p>  <span class='label label-info'>{{bdate}}</span> </p>
+                  {{/if}}
 
                   </div>
                 </div>
                 <div class='row'>
-                  <div class='col-xs-6 col-md-6 col-lg-4'>
+                  <div class='col-xs-3 col-md-3 col-lg-3'>
                     <p class='text text-muted'>
                       <small class='text-muted'>
                         {{#if isMale}}
@@ -40,24 +42,34 @@
                       {{#if formalTreatment}}
                         <span class='label label-warning'>FORMAL</span>
                       {{/if}}
+
                     </p>
                   </div>
 
-                  <div class='col-xs-3 col-md-3 col-lg-4'>
+                  <div class='col-xs-3 col-md-3 col-lg-3'>
                     {{#if email}}
 
-                      <a class='btn btn-lg btn-primary' href='mailto:{{email}}' data-action='email'>
+                      <a class='btn btn-lg btn-primary' href='mailto:{{email}}' data-action='click-override'>
                         <i class='fa fa-envelope'></i>
                       </a>
 
                     {{/if}}
 
                   </div>
-                  <div class='col-xs-3 col-md-3 col-lg-4'>
+                  <div class='col-xs-3 col-md-3 col-lg-3'>
 
                     {{#if mobile}}
-                      <a class='btn btn-lg btn-primary' href='tel:{{mobile}}' data-action='mobile'>
+                      <a class='btn btn-lg btn-primary' href='tel:{{mobile}}' data-action='click-override'>
                         <i class='fa fa-whatsapp'></i>
+                      </a>
+                    {{/if}}
+
+                  </div>
+                  <div class='col-xs-3 col-md-3 col-lg-3'>
+
+                    {{#if phone}}
+                      <a class='btn btn-lg btn-primary' href='tel:{{phone}}' data-action='click-override'>
+                        <i class='fa fa-phone'></i>
                       </a>
                     {{/if}}
 
@@ -66,7 +78,7 @@
                 </div>
               </div>
               {{/with}}
-              
+
           {{/each}}
         </div>
       </div>
