cumpleanios muestra solo fecha

--- a/client/components/App/nav/App_nav.html
+++ b/client/components/App/nav/App_nav.html
@@ -37,8 +37,7 @@
         {{/if}}
 
         <ul class="nav navbar-nav navbar-right">
-          <li ><a href="{{ pathForHome }}"><i class="fa fa-search"></i> BUSCAR </a></li>
-          <li ><a href="{{ pathForHome }}"><i class="fa fa-dashboard"></i> PANEL </a></li>
+          <li ><a href="../"><i class="fa fa-dashboard"></i> PANEL </a></li>
         </ul>
       </div>
 
