--- a/client/components/Company/Company_show.html
+++ b/client/components/Company/Company_show.html
@@ -38,39 +38,13 @@
 
     </div>
     {{#if deleting}}
-    <br>
-      <div class='alert alert-danger shake' role='alert'>
-        <p>CUIDADO! MODO DE BORRADO. </p>
-        <p>Tocar la X para borrar elemento. </p>
-        <br>
-      <button id="exit-delete-btn" class='btn btn-danger' data-action='exit-delete'>
-        SALIR
-      </button>
-      </div>
+      {{> Alert_delete}}
     {{/if}}
     {{#if editing}}
-    <br>
-      <div class='alert alert-warning appear-first' role='alert'>
-        <p>MODO DE EDICION   <button id="exit-edit-btn" class='btn btn-warning' data-action='exit-edit'>
-        SALIR
-      </button>
-    </p>
-      </div>
+      {{> Alert_edit}}
     {{/if}}
     {{#if creating}}
-    <br>
-      <div class='alert alert-success appear-first' role='alert'>
-        <p>MODO DE CREACION   <button id="exit-create-btn" class='btn btn-success' data-action='exit-create'>
-        SALIR
-      </button>
-    </p>
-      </div>
-      <div class='row'>
-        <div class='col-xs-12 col-md-12 col-lg-12'>
-
-          {{> Template.dynamic template=create}}
-        </div>
-      </div>
+      {{> Alert_Form_Create}}
     {{/if}}
     <div class='row'>
 
