--- a/client/components/Options/Create_options.html
+++ b/client/components/Options/Create_options.html
@@ -12,14 +12,8 @@
     </div>
 
     <div class='col-xs-12 col-md-6 col-lg-3'>
-      <a class='btn btn-primary appear-third' href="{{pathFor 'createSupply'}}">+INSUMO</a>
+      <a class='btn btn-primary appear-third' href="{{pathFor 'createGeneric'}}">+GENERICO</a>
       <hr>
     </div>
-
-    <div class='col-xs-12 col-md-6 col-lg-3'>
-      <a class='btn btn-primary appear-fourth' href="{{pathFor 'createProduct'}}">+PRODUCTO</a>
-      <hr>
-    </div>
-
     </div>
 </template>
