--- a/client/stylesheets/base/type.import.less
+++ b/client/stylesheets/base/type.import.less
@@ -8,10 +8,12 @@ h1, h2, h3, h4, h5, h6,
 
 .text-muted {
   color: @muted;
-
-
 }
 
 .shadow {
     text-shadow:0px 1px 1px rgba(1,1,1,0.4);
+}
+
+.text-complement {
+  color: @complement;
 }
