--- a/client/stylesheets/base/variables.import.less
+++ b/client/stylesheets/base/variables.import.less
@@ -11,6 +11,7 @@
 @headings: white;
 @text: #111;
 @muted: grey;
+@complement: rgba(255, 255, 255, 0.88);
 @white-alpha : rgba(255, 255, 255, .60);
 @startColor: #0B91B7;
 @endColor: #D0BF9C;
