--- a/client/components/Search/Search_fast_result.html
+++ b/client/components/Search/Search_fast_result.html
@@ -2,6 +2,9 @@
   <!-- FAST VIEW, NOT PROFILE, USER HAS TO CLICK ON THE NAME TO GO TO PROFILE PAGE -->
   <div class='appear-first'>
     <br>
+    search fast resultsCount {{_id}} {{treatedAs}} {{name}}
+    <a class='btn btn-primary' href='../show-{{actodeType}}/{{_id}}'>VER</a>
+
     {{#if rel}}
       <h3>{{name}}</h3>
       <p>
