--- a/client/stylesheets/base/variables.import.less
+++ b/client/stylesheets/base/variables.import.less
@@ -11,14 +11,14 @@
 @headings: white;
 @text: #111;
 @muted: grey;
-@complement: rgba(255, 255, 255, 0.88);
+@complement: rgba(63, 53, 78, 0.88);
 @white-alpha : rgba(255, 255, 255, .60);
 @startColor: #0B91B7;
 @endColor: #D0BF9C;
 
 
 @stop1:0;
-@color1:white;
+@color1:@arena;
 @stop2:30%;
 @color2:@arena;
 @stop3:100%;
@@ -29,6 +29,8 @@
 @arena:#D0BF9C;
 @azul-oscuro:#383980;
 @turquesa:#0B91B7;
+
+
 /*
 
 beach
