--- a/client/components/Company/Company_create.html
+++ b/client/components/Company/Company_create.html
@@ -3,19 +3,55 @@
     <div class="panel-heading">DATOS DE LA EMPRESA</div>
 
     <div class="panel-body">
-      {{#autoForm collection="Actodes" id="insertCompany" type="insert"}}
-      <fieldset>
+        <form data-action='form'>
+          <div class='row'>
 
-        {{> afQuickField name="actodeType" value=2}}
-        {{> afQuickField name="actodeIdType" value="CUIT"}}
-        {{> afQuickField name="country" options=countryOptions value='AR'}}
-        {{> afQuickField name="name"}}
-        {{> afQuickField name="cuit"}}
+          <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+            {{#momentum plugin='growl'}}
+            <div class="form-group">
+              <label class="control-label" for="name">Raz&oacute;n social</label>
+              <input class="form-control" data-action="nameInput" id="nameInput" name="name" type="text">
+              <span class="form-control-feedback"></span>
+              <span class="help-block"></span>
+            </div>
+            {{/momentum}}
+          </div>
+          <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+              <div class="form-group">
+                <label class="control-label" for="country">De qu&eacute; pa&iacute;s es la empresa?</label>
+                <select data-action='country' id='countryInput' class='form-control'>
+                  <option value ="Argentina" selected>Argentina</option>
+                  <option value ="Brazil" >Brasil</option>
+                  <option value ="Chile" >Chile</option>
+                  <option value ="Uruguay" >Uruguay</option>
+                  <option value ="Paraguay" >Paraguay</option>
+                  {{#each countries}}
+                    <option value="{{name}}">{{name}}</option>
+                  {{/each}}
+                </select>
+                <span class="form-control-feedback"></span>
+                <span class="help-block"></span>
+              </div>
+          </div>
+          <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
+            <div class="form-group">
+              <label class="control-label" for="cuit">CUIT</label>
+              <input class="form-control" data-action="cuitInput" id="cuitInput" name="cuit" type="number">
+              <span class="form-control-feedback"></span>
+              <span class="help-block"></span>
+            </div>
+          </div>
 
+      </div>
+      <div class='row'>
+        <div class='col-xs-12 col-sm-6 col-md-4 col-lg-3'>
 
-      </fieldset>
-      <button type="submit" class="btn btn-primary">CREAR</button>
-      {{/autoForm}}
+        <button class="btn btn-success" type="submit">CREAR</button>
+      </div>
+    </div>
+
+        </form>
+
     </div>
   </div>
 </template>
