--- a/client/components/Contact/Contact_show.html
+++ b/client/components/Contact/Contact_show.html
@@ -9,7 +9,7 @@
         </h4>
         <div class=''>
           {{#each rel}}
-          {{notes}}
+
           {{#with contact origin}}
 
               <div class='well well-clickable well-sm {{#if deleting}}shake{{/if}}' id='{{_id}}' data-action='show-profile'>
@@ -21,31 +21,31 @@
                         <button class='btn btn-danger shadow' data-action='delete-item'> X </button>
                       </div>
                     {{/if}}
+                    <p class='text-right'>{{> Birthday_show}}
+                    {{#if formalTreatment}}
+                      <span class='label label-warning text-right'>FORMAL</span>
+                    {{/if}}</p>
                     <h4 class='text-info'>
-                  {{treatedAs}}</h4>
-                  <p class='text-muted'>{{name}} {{lastName}} {{bdate}}</p>
-                  {{> Birthday_show}}
+                  {{treatedAs}}
+                </h4>
+
+                  <p class='text'>{{relNotes}}</p>
+
+                  <p class='text-muted'>
+                    <small class='text-muted'>
+                      {{#if getGender isMale}}
+                        <i class='fa fa-mars'> </i>{{else}}
+                        <i class='fa fa-venus'> </i>
+                      {{/if}}
+
+
+                    </small>
+                    {{name}} {{middleName}} {{lastName}}</p>
 
                   </div>
                 </div>
                 <div class='row'>
-                  <div class='col-xs-3 col-md-3 col-lg-3'>
-                    <p class='text text-muted'>
-                      <small class='text-muted'>
-                        {{#if isMale}}
-                          <i class='fa fa-mars'> </i>{{else}}
-                          <i class='fa fa-venus'> </i>
-                        {{/if}}
-
-                      </small>
-                      {{#if formalTreatment}}
-                        <span class='label label-warning'>FORMAL</span>
-                      {{/if}}
-
-                    </p>
-                  </div>
-
-                  <div class='col-xs-3 col-md-3 col-lg-3'>
+                  <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
                     {{#if email}}
 
                       <a class='btn btn-lg btn-primary' href='mailto:{{email}}' data-action='click-override'>
@@ -55,7 +55,7 @@
                     {{/if}}
 
                   </div>
-                  <div class='col-xs-3 col-md-3 col-lg-3'>
+                  <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
 
                     {{#if mobile}}
                       <a class='btn btn-lg btn-primary' href='tel:{{mobile}}' data-action='click-override'>
@@ -64,7 +64,7 @@
                     {{/if}}
 
                   </div>
-                  <div class='col-xs-3 col-md-3 col-lg-3'>
+                  <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
 
                     {{#if phone}}
                       <a class='btn btn-lg btn-primary' href='tel:{{phone}}' data-action='click-override'>
