--- a/client/components/Generic/Generic_create.html
+++ b/client/components/Generic/Generic_create.html
@@ -21,13 +21,13 @@
             <input id='es_desc' type="text" class="form-control" placeholder="Por ejemplo: 'Polietileno de alta densidad para usar en soplado de envases'" aria-describedby="basic-addon1">
           </div>
         </div>
-        <div class="form-group">
+  <!--      <div class="form-group">
           <div class="input-group">
             <label for="globalCode">C&oacute;digo Global </label>
             <p class='text-info'> Este va a ser el c&oacute;digo internacional para este gen&eacute;rico. Por eso debe estar en ingl&eacute;s.</p>
             <input id='globalCode' type="text" class="form-control" placeholder="Por ejemplo : 'PEADBLOW'" aria-describedby="basic-addon1">
           </div>
-        </div>
+        </div>-->
         <button type="submit" class="btn btn-default">CREAR</button>
       </form>
     </div>
