--- a/client/components/Rel/Rel_show.html
+++ b/client/components/Rel/Rel_show.html
@@ -2,15 +2,15 @@
   <div class='col-xs-12 col-md-6 col-lg-3'>
     {{#if rel}}
       <h4 class='text-uppercase'>Comentarios
-        <small></small>
       </h4>
       {{#with rel}}
       {{#momentum plugin='fade'}}
         {{#if editingId thisId}}
-          EDITANDO REL {{thisId}}
           {{> Rel_edit}}
         {{else}}
                   <div class='well well-sm' data-action='edit' >
+                    <p class='text-right'><span class='label label-default'>{{relTypeTranslate getRelType}}</span></p>
+
                     <p>{{notes}}</p>
                     {{#if paymentNotes}}
                         <p>
