--- a/client/stylesheets/base/type.import.less
+++ b/client/stylesheets/base/type.import.less
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .shadow {
-    text-shadow:0px 1px 1px rgba(1,1,1,0.4);
+    text-shadow:0px 1px 1px rgba(34, 34, 32, 0.4);
 }
 
 .text-complement {
