--- a/client/stylesheets/components/components.import.less
+++ b/client/stylesheets/components/components.import.less
@@ -4,6 +4,9 @@
 .component-colored-info {
 }
 
+html {
+  background: @arena !important
+}
 body {
   /*background: url('Blur-3.png');
   background-size: 2500px 1600px;
@@ -42,6 +45,39 @@ background-position: center center;*/
 
 
 //
+}
+
+.map_canvas { 
+  width: 100%;
+  height: 400px;
+  margin: 10px 20px 10px 0;
+}
+
+#container {
+    width: 100%;
+    height: 300px;
+    float: left;
+    position: relative;
+    color: #fff;
+    overflow: hidden;
+}
+
+#map_container {
+    background: transparent no-repeat 0 0;
+    width: 100%;
+    height: 300px;
+    float: left;
+
+}
+
+#other_content {
+    background: transparent;
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    width: 100%;
+    overflow: hidden;
+    clear: both;
 }
 
 .navbar {
