Generics show y correccion en mensj de validacion

--- a/client/components/Contact/afContact_create.html
+++ b/client/components/Contact/afContact_create.html
@@ -60,6 +60,9 @@
         {{/momentum}}
       </fieldset>
       <button type='submit' class='btn btn-primary'>CREAR</button>
+      <div id="summary">
+        resumen
+      </div>
     {{/autoForm}}
 </div>
   </div>
