--- a/client/components/Dashboard/Dashboard.html
+++ b/client/components/Dashboard/Dashboard.html
@@ -15,19 +15,14 @@
       {{/if}}
     </div>
   </div>
-  
+
   <div class='row'>
     <div class='col-xs-12 col-md-6 col-lg-4'>
     <p class='text-left text-info'><small>BUSCAR</small></p>
   {{> Search_actode}}
 </div>
-<div class='col-xs-12 col-md-6 col-lg-4'>
-<p class='text-left text-info'><small>NEW COMP.</small></p>
-</div>
-<div class='col-xs-12 col-md-6 col-lg-4'>
-  <p class='text-left text-info'><small>NEW COMP.</small></p>
+<a class='btn btn-primary' href="/show-generics">MOSTRAR GENERICOS</a>
 
-</div>
 </div>
 
 <!--{{> Template.dynamic template=createArea}}-->
