--- a/client/components/Contact/Contact_create.tpl.jade
+++ b/client/components/Contact/Contact_create.tpl.jade
@@ -95,3 +95,5 @@ br
         .col-xs-12.col-sm-6.col-md-4.col-lg-3
           hr
           button.btn.btn-success(type='submit') CREAR
+          br
+          span#summary.label.label-warning
