--- a/client/components/Place/Place_create.html
+++ b/client/components/Place/Place_create.html
@@ -23,15 +23,15 @@
             <span class="help-block text-muted small-font text-center">#</span>
             <input class="form-control" name="street_number" id="street_number" type="text"/>
           </div>
-          <div class="col-md-2 col-sm-2 col-xs-4">
+          <div class="col-md-2 col-sm-2 col-xs-4 col-xs-6 col-xs-offset-3">
             <span class="help-block text-muted small-font text-center">CP</span>
             <input class="form-control" name="postal_code" id="postal_code" type="text"/>
           </div>
-          <div class="col-md-2 col-sm-2 col-xs-4">
+          <div class="col-md-2 col-sm-2 col-xs-6">
             <span class="help-block text-muted small-font text-center">LAT</span>
             <input class="form-control" name="lat"  id="lat" type="text"/>
           </div>
-          <div class="col-md-2 col-sm-2 col-xs-4">
+          <div class="col-md-2 col-sm-2 col-xs-6">
             <span class="help-block text-muted small-font text-center">LONG</span>
             <input class="form-control" name="lng" id="lng" type="text"/>
           </div>
